<resources>
    <string name="app_name">ToDoList</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="btn_login">Login</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_categories">Categories</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="changePassword">change password</string>
    <string name="editTasks">edit tasks</string>
    <string name="menu_gallery">categories</string>
    <string name="menu_priority">Priority</string>
    <string name="menu_calendar">Calendar</string>
    <string name="menu_timer">Timer</string>
    <string name="menu_help">Help</string>
    <string name="menu_about">About</string>
    <string name="menu_task">Tasks</string>
    <string name="taskTitle">Task Title</string>
    <string name="taskCategory">Category</string>
    <string name="taskTime">Time</string>
    <string name="taskDate">Select a Date</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start">start</string>
    <string name="stop">stop</string>
    <string name="reset">reset</string>
    <string name="action_logout">Logout</string>
    <string name="default_time">20:00</string>
    <string name="retype_new_password">Retype New Password</string>
    <string name="new_password">New Password</string>
    <string name="current_password">Current Password</string>
    <string name="app_title"><![CDATA[TO-DO LIST APP - J&F]]></string>
</resources>