<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_action_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_task"
            android:icon="@drawable/ic_action_task"
            android:title="@string/menu_task" />
        <item
            android:id="@+id/nav_calendar"
            android:icon="@drawable/ic_action_calendar"
            android:title="@string/menu_calendar" />
        <item
            android:id="@+id/nav_timer"
            android:icon="@drawable/ic_action_timer"
            android:title="@string/menu_timer" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_action_help"
            android:title="@string/menu_help" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_action_info"
            android:title="@string/menu_about" />
    </group>
</menu>