<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.todolist.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_task"
        android:name="com.example.todolist.ui.gallery.TaskFragment"
        android:label="@string/menu_task"
        tools:layout="@layout/fragment_task" />

    <fragment
        android:id="@+id/nav_calendar"
        android:name="com.example.todolist.ui.calendar.CalendarFragment"
        android:label="@string/menu_calendar"
        tools:layout="@layout/fragment_calendar" />
    <fragment
        android:id="@+id/nav_timer"
        android:name="com.example.todolist.ui.timer.TimerFragment"
        android:label="@string/menu_timer"
        tools:layout="@layout/fragment_timer" />
    <fragment
        android:id="@+id/nav_help"
        android:name="com.example.todolist.ui.help.HelpFragment"
        android:label="@string/menu_help"
        tools:layout="@layout/fragment_help" />

    <fragment
        android:id="@+id/nav_about"
        android:name="com.example.todolist.ui.about.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />
<!--    <fragment-->
<!--        android:id="@+id/nav_add_task"-->
<!--        android:name="com.example.todolist.AddTaskActivity"-->
<!--        tools:layout="@layout/activity_add_task" />-->
</navigation>