<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.timer.TimerFragment">

    <!-- TODO: Update blank fragment layout -->


    <EditText
        android:id="@+id/timeInput"
        android:layout_width="251dp"
        android:layout_height="104dp"
        android:textSize="50sp"
        android:textAlignment="center"
        android:visibility="visible"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="150dp"
        android:text="@string/default_time" />

    <TextView
            android:id="@+id/timeDisplay"
            android:layout_width="251dp"
            android:layout_height="104dp"
            android:textSize="50sp"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:visibility="invisible"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="167dp" />

    <Button
        android:id="@+id/btnStart"
        android:layout_width="135dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="300dp"
        android:text="@string/start" />

    <Button
        android:id="@+id/btnStop"
        android:layout_width="135dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="370dp"
        android:text="@string/stop" />

    <Button
        android:id="@+id/btnReset"
        android:layout_width="135dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="440dp"
        android:text="@string/reset" />

</FrameLayout>