<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                tools:context=".Login"
                android:orientation="vertical">

    <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/hallway_background"
            android:scaleType="centerCrop"
            android:layout_centerInParent="true" />

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerInParent="true"
            android:layout_marginTop="50dp"
            android:background="@color/design_default_color_surface" >

        <EditText
                android:id="@+id/edtUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginTop="30dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/username_hint"
                tools:layout_editor_absoluteX="98dp"
                tools:layout_editor_absoluteY="95dp" />

        <EditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginTop="20sp"
                android:ems="10"
                android:hint="@string/password_hint"
                android:inputType="textPassword" />

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal" >


            <Button
                    android:id="@+id/btnSignup"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="15dp"
                    android:text="@string/btn_sign_up" />

            <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="70sp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="15dp"
                    android:text="@string/btn_login" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
