<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddTaskActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <EditText
            android:id="@+id/txtTaskName"
            android:layout_width="315dp"
            android:layout_height="47dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/taskTitle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.196" />

        <EditText
            android:id="@+id/txtTaskCategory"
            android:layout_width="315dp"
            android:layout_height="47dp"
            android:ems="10"
            android:layout_marginTop="15dp"
            android:hint="@string/taskCategory"
            android:inputType="textPersonName"
            app:layout_constraintTop_toBottomOf="@+id/txtTaskTitle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.307" />

        <Spinner
            android:id="@+id/spinnerPriority"
            android:layout_width="315dp"
            android:layout_height="47dp"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@+id/txtTaskCategory"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.397"
            android:spinnerMode="dropdown"
            android:background="@android:drawable/btn_dropdown"/>

        <Spinner
            android:id="@+id/spinnerTime"
            android:layout_width="315dp"
            android:layout_height="47dp"
            android:ems="10"
            android:layout_marginTop="15dp"
            android:hint="@string/taskTime"
            android:inputType="textPersonName"
            app:layout_constraintTop_toBottomOf="@+id/spinnerPriority"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:spinnerMode="dropdown"
            android:background="@android:drawable/btn_dropdown"/>

        <Button
            android:id="@+id/btnDatePicker"
            android:layout_width="315dp"
            android:layout_height="47dp"
            android:ems="10"
            android:backgroundTint="@color/lightslategray"
            app:layout_constraintTop_toBottomOf="@+id/txtTime"
            android:layout_marginTop="15dp"
            android:text="@string/taskDate"
            android:focusable="true"
            android:focusableInTouchMode="true"
            app:layout_constraintVertical_bias="0.713" />

        <Button
            android:id="@+id/btnAddTask"
            android:layout_width="162dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="Add Task"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.713" />


    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>